--- a/Downloader/templates/guide.html
+++ b/Downloader/templates/guide.html
@@ -36,7 +36,7 @@
 
             <a href="/" class="github-btn">VOLVER AL INICIO</a>
         </div>
-        <footer>Desarrollado por JaxS | 2026</footer>
+        <footer>Desarrollado por Jax | 2026</footer>
     </div>
 </body>
 </html>
